Feat: Add HTML structure and layout

--- a/index.html
+++ b/index.html
@@ -26,13 +26,48 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    Reliable, efficient delivery Powered by Technology Our Artificial
-    Intelligence powered tools use millions of project data points to ensure
-    that your project is successful Supervisor Monitors activity to identify
-    project roadblocks Team Builder Scans our talent network to create the
-    optimal team for your project Karma Regularly evaluates our talent to ensure
-    quality Calculator Uses data from past projects to provide better delivery
-    estimates
+    <header>
+      <h2>Reliable, efficient delivery</h2>
+      <h1>Powered by Technology</h1>
+      <p>
+        Our Artificial Intelligence powered tools use millions of project data
+        points to ensure that your project is successful
+      </p>
+    </header>
+
+    <main class="4-card">
+      <div class="card card--1">
+        <h2 class="card__title">Supervisor</h2>
+        <p class="card__text">
+          Monitors activity to identify project roadblocks
+        </p>
+        <img src="card__img" alt="Magnifying glass doodle" />
+      </div>
+
+      <div class="card card--2">
+        <h2 class="card__title">Team Builder</h2>
+        <p class="card__text">
+          Scans our talent network to create the optimal team for your project
+        </p>
+        <img src="card__img" alt="Magnifying glass doodle" />
+      </div>
+
+      <div class="card card--3">
+        <h2 class="card__title">Karma</h2>
+        <p class="card__text">
+          Regularly evaluates our talent to ensure quality
+        </p>
+        <img src="card__img" alt="Magnifying glass doodle" />
+      </div>
+
+      <div class="card card--4">
+        <h2 class="card__title">Calculator</h2>
+        <p class="card__text">
+          Uses data from past projects to provide better delivery estimates
+        </p>
+        <img src="card__img" alt="Magnifying glass doodle" />
+      </div>
+    </main>
 
     <footer>
       <p class="attribution">
