Feat: Add icons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p class="card__text">
           Monitors activity to identify project roadblocks
         </p>
-        <img src="card__img" alt="Magnifying glass doodle" />
+        <img src="./images/icon-supervisor.svg" alt="Magnifying glass doodle" />
       </div>
 
       <div class="card card--2">
@@ -49,7 +49,7 @@
         <p class="card__text">
           Scans our talent network to create the optimal team for your project
         </p>
-        <img src="card__img" alt="Magnifying glass doodle" />
+        <img src="./images/icon-team-builder.svg" alt="house doodle" />
       </div>
 
       <div class="card card--3">
@@ -57,7 +57,7 @@
         <p class="card__text">
           Regularly evaluates our talent to ensure quality
         </p>
-        <img src="card__img" alt="Magnifying glass doodle" />
+        <img src="./images/icon-karma.svg" alt="lightbulb doodle" />
       </div>
 
       <div class="card card--4">
@@ -65,7 +65,7 @@
         <p class="card__text">
           Uses data from past projects to provide better delivery estimates
         </p>
-        <img src="card__img" alt="Magnifying glass doodle" />
+        <img src="./images/icon-calculator.svg" alt="computer monitor doodle" />
       </div>
     </main>
 
