--- a/index.html
+++ b/index.html
@@ -26,56 +26,64 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <header>
-      <h2>Reliable, efficient delivery</h2>
-      <h1>Powered by Technology</h1>
-      <p>
-        Our Artificial Intelligence powered tools use millions of project data
-        points to ensure that your project is successful
-      </p>
-    </header>
-
-    <main class="4-card">
-      <div class="card card--1">
-        <h2 class="card__title">Supervisor</h2>
-        <p class="card__text">
-          Monitors activity to identify project roadblocks
+    <div class="container row">
+      <header class="header">
+        <h2 class="header__subtitle">Reliable, efficient delivery</h2>
+        <h1 class="header__title">Powered by Technology</h1>
+        <p class="header__text">
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
         </p>
-        <img src="./images/icon-supervisor.svg" alt="Magnifying glass doodle" />
-      </div>
+      </header>
 
-      <div class="card card--2">
-        <h2 class="card__title">Team Builder</h2>
-        <p class="card__text">
-          Scans our talent network to create the optimal team for your project
+      <main class="4-card">
+        <div class="card card--1">
+          <h2 class="card__title">Supervisor</h2>
+          <p class="card__text">
+            Monitors activity to identify project roadblocks
+          </p>
+          <img
+            src="./images/icon-supervisor.svg"
+            alt="Magnifying glass doodle"
+          />
+        </div>
+
+        <div class="card card--2">
+          <h2 class="card__title">Team Builder</h2>
+          <p class="card__text">
+            Scans our talent network to create the optimal team for your project
+          </p>
+          <img src="./images/icon-team-builder.svg" alt="house doodle" />
+        </div>
+
+        <div class="card card--3">
+          <h2 class="card__title">Karma</h2>
+          <p class="card__text">
+            Regularly evaluates our talent to ensure quality
+          </p>
+          <img src="./images/icon-karma.svg" alt="lightbulb doodle" />
+        </div>
+
+        <div class="card card--4">
+          <h2 class="card__title">Calculator</h2>
+          <p class="card__text">
+            Uses data from past projects to provide better delivery estimates
+          </p>
+          <img
+            src="./images/icon-calculator.svg"
+            alt="computer monitor doodle"
+          />
+        </div>
+      </main>
+
+      <footer>
+        <p class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Your Name Here</a>.
         </p>
-        <img src="./images/icon-team-builder.svg" alt="house doodle" />
-      </div>
-
-      <div class="card card--3">
-        <h2 class="card__title">Karma</h2>
-        <p class="card__text">
-          Regularly evaluates our talent to ensure quality
-        </p>
-        <img src="./images/icon-karma.svg" alt="lightbulb doodle" />
-      </div>
-
-      <div class="card card--4">
-        <h2 class="card__title">Calculator</h2>
-        <p class="card__text">
-          Uses data from past projects to provide better delivery estimates
-        </p>
-        <img src="./images/icon-calculator.svg" alt="computer monitor doodle" />
-      </div>
-    </main>
-
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
