--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
         </p>
       </header>
 
-      <main class="4-card">
+      <main class="four-card">
         <div class="card card--1">
           <h2 class="card__title">Supervisor</h2>
           <p class="card__text">
             Monitors activity to identify project roadblocks
           </p>
           <img
+            class="card__img"
             src="./images/icon-supervisor.svg"
             alt="Magnifying glass doodle"
           />
@@ -53,7 +54,11 @@
           <p class="card__text">
             Scans our talent network to create the optimal team for your project
           </p>
-          <img src="./images/icon-team-builder.svg" alt="house doodle" />
+          <img
+            class="card__img"
+            src="./images/icon-team-builder.svg"
+            alt="house doodle"
+          />
         </div>
 
         <div class="card card--3">
@@ -61,7 +66,11 @@
           <p class="card__text">
             Regularly evaluates our talent to ensure quality
           </p>
-          <img src="./images/icon-karma.svg" alt="lightbulb doodle" />
+          <img
+            class="card__img"
+            src="./images/icon-karma.svg"
+            alt="lightbulb doodle"
+          />
         </div>
 
         <div class="card card--4">
@@ -70,6 +79,7 @@
             Uses data from past projects to provide better delivery estimates
           </p>
           <img
+            class="card__img"
             src="./images/icon-calculator.svg"
             alt="computer monitor doodle"
           />
