--- a/index.html
+++ b/index.html
@@ -89,9 +89,16 @@
       <footer>
         <p class="attribution">
           Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          <a
+            href="https://www.frontendmentor.io/challenges/four-card-feature-section-weK1eFYK"
+            target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="#">Your Name Here</a>.
+          >. Coded by
+          <a
+            href="https://github.com/pkthunder87/4-card-feature"
+            target="_blank"
+            >PKThunder87</a
+          >.
         </p>
       </footer>
     </div>
